kubernetes/ivy-engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivy-engine
  labels:
    app: ivy-engine
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ivy-engine
  template:
    metadata:
      labels: 
        app: ivy-engine
    spec:
      containers:
      - name: ivy-engine
        image: axonivy/axonivy-engine:redis
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "0.5"
            memory: "2G"
        volumeMounts:
        - name: config
          mountPath: /etc/axonivy-engine/redisson.conf
          subPath: redisson.conf
        - name: config
          mountPath: /etc/axonivy-engine/ivy.yaml
          subPath: ivy.yaml
        - name: config
          mountPath: /etc/axonivy-engine/license.lic
          subPath: license.lic

      volumes:
      - name: config
        configMap:
          name: ivy-configmap
