kubernetes/ivy-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivy-redis
  labels:
    app: ivy-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ivy-redis
  template:
    metadata:
      labels: 
        app: ivy-redis
    spec:
      containers:
      - name: redis
        image: redis:7
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: "0.5"
            memory: "100M"
