kubernetes/ivy-sysdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivy-sysdb
  labels:
    app: ivy-sysdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ivy-sysdb
  template:
    metadata:
      labels: 
        app: ivy-sysdb
    spec:
      containers:
      - name: ivy-sysdb
        image: "postgres:latest"
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: "0.5"
            memory: "2G"
