kubernetes/ivy-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ivy-redis
  labels:
    app: ivy-redis
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 6379
      targetPort: 6379
  selector:
    app: ivy-redis
