kubernetes/ivy-sysdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ivy-sysdb
  labels:
    app: ivy-sysdb
spec:
  type: LoadBalancer
  ports:
    - name: jdbc
      port: 5432
      targetPort: 5432
  selector:
    app: ivy-sysdb
